# hikizan-emacs

./: .dir-locals.el  .gitignore  AGENTS.md  README.org  early-init.el  hikizan-theme.el  init.el
lisp/: hikizan-agent.el  (+13 more)
python/: PROMPT_ENHANCEMENT_PLAN.md  README.md  emacsagent.py  memory.py  prompt.py  pyproject.toml  requirements.txt  tools.py
python/emacs_agent/: agent.py  common_prompts.py  emacs_manager.py  main.py  storage.py  telemetry.py
python/emacs_agent/skills/code-review/: SKILL.md
python/emacs_agent/skills/commit-generator/: SKILL.md
python/emacs_agent/sub_agents/browser_executor/: __init__.py  agent.py
python/emacs_agent/sub_agents/code_review/: __init__.py  agent.py
python/emacs_agent/sub_agents/coder/: __init__.py  agent.py
python/emacs_agent/sub_agents/commit_generator/: agent.py
python/emacs_agent/sub_agents/debugger/: __init__.py  agent.py
python/emacs_agent/sub_agents/documenter/: __init__.py  agent.py
python/emacs_agent/sub_agents/elisp_executor/: __init__.py  agent.py
python/emacs_agent/sub_agents/git_operator/: __init__.py  agent.py
python/emacs_agent/sub_agents/issue_creator/: __init__.py  agent.py
python/emacs_agent/sub_agents/project_manager/: __init__.py  agent.py
python/emacs_agent/sub_agents/refactor/: __init__.py  agent.py
python/emacs_agent/sub_agents/self_reflection/: __init__.py  agent.py
python/emacs_agent/sub_agents/task_planner/: __init__.py  agent.py
python/emacs_agent/tools/: browser.py  elisp.py  issues.py  plans.py
python/emacsagent/: agent.py  prompt.py
python/tests/: test_basic.py
(+24 files in other folders)
